stage 6 with Dan